# mkslides

./: Cargo.toml  README.md  example.md
src/: main.rs  slide.rs
