[package]
name = "mkslides"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bat = "0.23.0"
comrak = "0.18.0"
crossterm = "0.26.1"
itertools = "0.11.0"
qrcode = "0.12.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
